# three-statement-financial-model

./: CLIENT_CONFIG_README.md  FINANCIAL_MODEL_README.md  IMPLEMENTATION_SUMMARY.md  NEW_CLIENT_EXAMPLE.md  QUICK_START.md  actuals.json  balance_sheet.csv  cash_flow_statement.csv  client_config.yaml  create_config_from_excel.py  financial_model.py  formula_extractor.py  generate_financial_model_excel.py  income_statement.csv  pyproject.toml
data/: 3_statement_excel_completed_model.xlsx  formula.json  reference_3sample_model.xlsx
data/reference_3sample_model/: About-Table 1.csv  Balance Sheet-Table 1.csv  Cash Flow Statement-Table 1.csv  Income Statement-Table 1.csv
output/: balance_sheet.csv  cash_flow_statement.csv  financial_model.xlsx  income_statement.csv
utils/: actuals_extractor.py
