[project]
name = "kriti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "joblib>=1.5.1",
    "machine-learning-helpers",
    "matplotlib>=3.10.5",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-flavor>=0.7.0",
    "polars>=1.32.3",
    "pyjanitor>=0.31.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
machine-learning-helpers = { git = "https://github.com/vmasrani/machine_learning_helpers.git" }
